add javap output for record init